--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
     </div>
     <script>
         var typed = new Typed(".text", {
-            strings: ["Java Developer....", "Web Designer....", "Backend Developer...."],
+            strings: ["MERN Stack Developer....", "Web Designer....", "Backend Developer....", "Java Developer...."],
             typeSpeed: 100,
             backSpeed: 100,
             backDelay: 1000,
