--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 <body>
     <nav>
         <div class="logo">
-        <img  src="/public/images/logo MJ.png" alt="logo" >
-    </div>
+            <img src="/public/images/logo MJ.png" alt="logo">
+        </div>
         <ul id="sidemenu">
             <li><a href="#header">Home</a></li>
             <li><a href="#about">About</a></li>
@@ -52,19 +52,16 @@
                 </div>
                 <div class="about-col-2">
                     <h1 class="Sub-Title">About Me</h1>
-                    <p> I am Mukul Jain, a passionate and resourceful Full Stack Java Developer with hands-on experience
-                        in crafting seamless digital solutions. I have recently completed a Full Stack Java Development
+                    <p> I am Mukul Jain, a passionate and resourceful MERN Stack Developer with hands-on experience in
+                        crafting seamless digital solutions. I have recently completed a Full Stack Java Development
                         training at "Naresh I Technologies," where I worked on Java features, responsive frontend
                         design, and efficient database management using Oracle and MySQL. My technical skill set
-                        includes Java, SQL, Oracle, HTML5, CSS3, Spring, and MVC frameworks.
-
-                        One of my notable projects is an Online Banking Management System, where I utilized Java Swing
-                        for a user-friendly interface and MySQL for secure backend operations. I am currently pursuing
-                        my Master's in Computer Applications (MCA) at Bundelkhand University, with a consistent academic
-                        performance.
-
-                        I am committed to continuous learning and contributing to innovative projects, aiming to bring
-                        value to forward-thinking organizations.</p>
+                        includes Node.js, Express.js, MongoDb, Java, SQL, Oracle, HTML5, CSS3, Spring, and MVC
+                        frameworks. One of my notable projects is an Online Banking Management System, where I utilized
+                        Java Swing for a user-friendly interface and MySQL for secure backend operations. I am currently
+                        pursuing my Master's in Computer Applications (MCA) at Bundelkhand University, with a consistent
+                        academic performance. I am committed to continuous learning and contributing to innovative
+                        projects, aiming to bring value to forward-thinking organizations.</p>
                     <div class="tab-titles">
                         <p class="tab-links active-link" onclick="opentab('skills')">Skills</p>
                         <p class="tab-links" onclick="opentab('experience')">Experience</p>
@@ -173,7 +170,7 @@
             <a href="#" class="btn">See More</a>
         </div>
     </div>
-  
+
 
     <!-- ------------------------------------contact------------------------------- -->
 
